--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
           cd public
           ls -lhart
           date > date.txt
+          git config user.name "test"
+          git config user.email "test@test.com"
           git add --all .
           git commit -m 'test'
           git push -f
